<resources>
    <string name="app_name">TelaCadastro</string>
    <string name="entrar">Entrar</string>
    <string name="registar">Registar</string>
    <string name="digite_o_teu_nome">Digite o teu nome</string>
    <string name="email">email</string>
    <string name="palavra_passe">palavra passe</string>
    <string name="registo">Registo</string>
    <string name="entrar_na_conta">Entrar na Conta</string>
    <string name="emailT2">email</string>
    <string name="registarT2">Registar</string>
    <string name="entrarT2">Entrar</string>
    <string name="palavra_passeT2">palavra passe</string>
    <string name="categoria">Categoria</string>
    <string name="proximo">Proximo</string>
    <string name="_2_71">2.71</string>
    <string name="_3_14">3.14</string>
    <string name="_6_618">6.618</string>
    <string name="exercicio_1">Exercicio 1</string>
    <string name="responder">Responder</string>
    <string name="quanto_vale_pi">Quanto Vale Pi ?</string>
    <string name="pontuacao_10">Pontuacao: 10</string>
    <string name="pontuacao_10F">pontuacao 10</string>
    <string name="exercicio_1F">Exercicio_1</string>
    <string name="o_que_significa_forca_centripeta">O que significa forca centripeta?</string>
    <string name="responderF">Responder</string>
    <string name="forca_massa">Forca/Massa</string>
    <string name="forca_que_tende_a_fugar">Forca que tende a fugar</string>
    <string name="forca_que_tende_para_o_centro">Forca que tende para o centro</string>
    <string name="eu_tu_ele_nos_vos_eles">Eu Tu Ele Nos Vos Eles</string>
    <string name="meu_teu_seu_nosso_vosso_deles">Meu teu Seu Nosso Vosso Deles</string>
    <string name="isto_aquilo_la_aqui_ali">Isto Aquilo La Aqui Ali</string>
    <string name="quais_sao_pronomes_possessivos">Quais sao Pronomes pocessivos?</string>
    <string name="h2o_c2">H2O +C2</string>
    <string name="h_c_o_o_h">H-C-O-O-H</string>
    <string name="co2_h2o">CO2 + H2O</string>
    <string name="exercicio_1Q">Exercicio 1</string>
    <string name="ch4_o2"><![CDATA[Ch4 +O2-->?]]></string>
    <string name="pontuacao_10Q">Pontuacao 10</string>
</resources>