<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercicio1P">

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="26dp"
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/exercicio_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/quais_sao_pronomes_possessivos"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="38dp"
        android:editable="false"
        android:text="@string/pontuacao_10"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toTopOf="@+id/responderP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radio1P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_tu_ele_nos_vos_eles" />

        <RadioButton
            android:id="@+id/radio2P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meu_teu_seu_nosso_vosso_deles" />

        <RadioButton
            android:id="@+id/radio3P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isto_aquilo_la_aqui_ali" />
    </RadioGroup>

    <TextView
        android:id="@+id/respostaP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="21dp"
        android:editable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/responderP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <Button
        android:id="@+id/responderP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="73dp"
        android:text="@string/responder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/respostaP"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />
</androidx.constraintlayout.widget.ConstraintLayout>