<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercicio1">

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/exercicio_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toTopOf="@+id/responderBtn"
        app:layout_constraintEnd_toEndOf="@+id/respostaText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_71"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_14"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_618"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/responderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="43dp"
        android:text="@string/responder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/respostaText"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/quanto_vale_pi"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        android:autofillHints="" />

    <TextView
        android:id="@+id/respostaText"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="43dp"
        android:editable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/responderBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="61dp"
        android:editable="false"
        android:text="@string/pontuacao_10"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
</androidx.constraintlayout.widget.ConstraintLayout>